...

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="enter_new_game_id">Enter existing campaign ID</string>
    <string name="create_new_campaign">Create New Campaign</string>
    <string name="new_campaign_title_label">Please enter a title for the new campaign:</string>
    <string name="new_campaign_title_hint">Title</string>
    <string name="new_campaign_description_label">Please enter a description for the new campaign:</string>
    <string name="new_campaign_description_hint">Description</string>
    <string name="start_campaign">start campaign</string>

    <string name="new_campaign_spinner_prompt">Please choose a base game</string>
    <string-array name="base_games">
        <item>Select a base game…</item>
        <item>Goblins? Goblins!</item>
        <item>Dungeons &amp; Dragons</item>
        <item>Pathfinder</item>
        <item>Beyonder</item>
    </string-array>
    <string name="title_activity_dm">DMActivity</string>

    <string name="new_module_title_label">Please enter a title for the new module:</string>
    <string name="new_module_title_hint">Title</string>
    <string name="new_module_summary_label">Please enter a summary for the new module:</string>
    <string name="new_module_summary_hint">Summary</string>
    <string name="create_module">create module</string>

    <string-array name="module_types">
        <item>Select a module type…</item>
        <item>Battle</item>
        <item>Story</item>
        <item>Non-battle</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_player">PlayerActivity</string>
...
    <string name="schedule">schedule</string>
    <string name="hat">Hat:</string>
    <string name="shirt">Shirt:</string>
    <string name="boots">Boots:</string>
    <string name="weapon">Weapon:</string>
    <string name="range">Range:</string>
    <string name="name_label">Name:</string>
    <string name="name_hint">Name</string>
    <string name="size_label">Size:</string>
    <string name="job_label">Job:</string>
    <string name="create">create</string>
    <string name="enter_a_note_title">Enter a note title:</string>
    <string name="title_hint">Title</string>
    <string name="enter_the_note_body">Enter the note body:</string>
    <string name="body_hint">Body</string>
    <string name="level_label">Level:</string>
    <string name="money_label">Money:</string>
    <string name="edit_note_title_hint">Please enter a title</string>
    <string name="edit_note_body_hint">Please enter a body</string>
    <string name="edit">edit</string>
    <string name="cancel">Cancel</string>
    <string name="slash">/</string>
    <string name="precious_goo">Precious Goo</string>
    <string name="body">Body:</string>
    <string name="mind">Mind:</string>
    <string name="essence">Essence:</string>
    <string name="level">Level</string>
...
