<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context="com.makalaster.adventurefriends.dm.dmFragments.module.OverviewPageFragment">

    <TextView
        android:id="@+id/module_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/module_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/module_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/launch_module_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_module"/>

    <Button
        android:id="@+id/complete_module_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_module"/>

</LinearLayout>
