...
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_module_title_label"/>

    <EditText
        android:id="@+id/new_module_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_module_title_hint"
        android:inputType="textCapWords"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_module_summary_label"/>

    <EditText
        android:id="@+id/new_module_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_module_summary_hint"/>

    <Spinner
        android:id="@+id/new_module_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spinner_margin"
        android:layout_marginTop="@dimen/spinner_margin"
        android:entries="@array/module_types"/>

    <Button
        android:id="@+id/create_new_module_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_module"/>

</LinearLayout>

