package com.makalaster.adventurefriends;


import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.longClick;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.action.ViewActions.scrollTo;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withParent;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class DMTest {

    @Rule
    public ActivityTestRule<LoginActivity> mActivityTestRule = new ActivityTestRule<>(LoginActivity.class);

    @Test
    public void dMTest() {
        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(60000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction button = onView(
                allOf(withId(R.id.twitter_button),
                        childAtPosition(
                                allOf(withId(R.id.btn_holder),
                                        childAtPosition(
                                                IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                                0)),
                                0),
                        isDisplayed()));
        button.check(matches(isDisplayed()));

        ViewInteraction button2 = onView(
                allOf(withId(R.id.facebook_button),
                        childAtPosition(
                                allOf(withId(R.id.btn_holder),
                                        childAtPosition(
                                                IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                                0)),
                                1),
                        isDisplayed()));
        button2.check(matches(isDisplayed()));

        ViewInteraction button3 = onView(
                allOf(withId(R.id.google_button),
                        childAtPosition(
                                allOf(withId(R.id.btn_holder),
                                        childAtPosition(
                                                IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                                0)),
                                2),
                        isDisplayed()));
        button3.check(matches(isDisplayed()));

        ViewInteraction button4 = onView(
                allOf(withId(R.id.email_provider),
                        childAtPosition(
                                allOf(withId(R.id.btn_holder),
                                        childAtPosition(
                                                IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                                0)),
                                3),
                        isDisplayed()));
        button4.check(matches(isDisplayed()));

        ViewInteraction button5 = onView(
                allOf(withId(R.id.email_provider),
                        childAtPosition(
                                allOf(withId(R.id.btn_holder),
                                        childAtPosition(
                                                IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                                0)),
                                3),
                        isDisplayed()));
        button5.check(matches(isDisplayed()));

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(60000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.google_button), withText("Sign in with Google"),
                        withParent(withId(R.id.btn_holder)),
                        isDisplayed()));
        appCompatButton.perform(click());

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(3559047);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        /*ViewInteraction textView = onView(
                allOf(withId(com.google.android.gms.R.id.title), withText("Choose account for Adventure Friends"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.FrameLayout.class),
                                        0),
                                0),
                        isDisplayed()));
        textView.check(matches(withText("Choose account for Adventure Friends")));*/

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(3558901);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction imageButton = onView(
                allOf(withId(R.id.new_campaign_fab),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.lobby_fragment_container),
                                        0),
                                1),
                        isDisplayed()));
        imageButton.check(matches(isDisplayed()));

        ViewInteraction floatingActionButton = onView(
                allOf(withId(R.id.new_campaign_fab), isDisplayed()));
        floatingActionButton.perform(click());

        ViewInteraction editText = onView(
                allOf(withId(R.id.existing_campaign_edit_text), withText("Enter existing campaign ID"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        0),
                                1),
                        isDisplayed()));
        editText.check(matches(withText("Enter existing campaign ID")));

        ViewInteraction radioButton = onView(
                allOf(withId(R.id.create_campaign_radio_button),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.custom),
                                        0),
                                1),
                        isDisplayed()));
        radioButton.check(matches(isDisplayed()));

        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.existing_campaign_edit_text), isDisplayed()));
        appCompatEditText.perform(longClick());

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(50);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction appCompatButton2 = onView(
                allOf(withText("Paste"), withContentDescription("Paste"), isDisplayed()));
        appCompatButton2.perform(click());

        ViewInteraction appCompatEditText2 = onView(
                allOf(withId(R.id.existing_campaign_edit_text), isDisplayed()));
        appCompatEditText2.perform(replaceText("-Kkki_KchEVaB_3WrD6m"), closeSoftKeyboard());

        ViewInteraction appCompatButton3 = onView(
                allOf(withId(android.R.id.button1), withText("GO")));
        appCompatButton3.perform(scrollTo(), click());

        ViewInteraction appCompatButton4 = onView(
                allOf(withId(android.R.id.button2), withText("Cancel")));
        appCompatButton4.perform(scrollTo(), click());

        ViewInteraction floatingActionButton2 = onView(
                allOf(withId(R.id.new_campaign_fab), isDisplayed()));
        floatingActionButton2.perform(click());

        ViewInteraction appCompatRadioButton = onView(
                allOf(withId(R.id.create_campaign_radio_button), withText("Create New Campaign"), isDisplayed()));
        appCompatRadioButton.perform(click());

        ViewInteraction appCompatButton5 = onView(
                allOf(withId(android.R.id.button1), withText("GO")));
        appCompatButton5.perform(scrollTo(), click());

        ViewInteraction editText2 = onView(
                allOf(withId(R.id.new_campaign_name_edit_text), withText("Title"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.lobby_fragment_container),
                                        0),
                                1),
                        isDisplayed()));
        editText2.check(matches(withText("Title")));

        ViewInteraction editText3 = onView(
                allOf(withId(R.id.new_campaign_description_edit_text), withText("Description"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.lobby_fragment_container),
                                        0),
                                3),
                        isDisplayed()));
        editText3.check(matches(withText("Description")));

        ViewInteraction button6 = onView(
                allOf(withId(R.id.start_campaign_button),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.lobby_fragment_container),
                                        0),
                                5),
                        isDisplayed()));
        button6.check(matches(isDisplayed()));

        ViewInteraction button7 = onView(
                allOf(withId(R.id.start_campaign_button),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.lobby_fragment_container),
                                        0),
                                5),
                        isDisplayed()));
        button7.check(matches(isDisplayed()));

        ViewInteraction appCompatEditText3 = onView(
                allOf(withId(R.id.new_campaign_name_edit_text), isDisplayed()));
        appCompatEditText3.perform(replaceText("Espresso"), closeSoftKeyboard());

        ViewInteraction appCompatEditText4 = onView(
                allOf(withId(R.id.new_campaign_description_edit_text), isDisplayed()));
        appCompatEditText4.perform(replaceText("Espresso testing"), closeSoftKeyboard());

        ViewInteraction appCompatSpinner = onView(
                allOf(withId(R.id.base_game_spinner), isDisplayed()));
        appCompatSpinner.perform(click());

        ViewInteraction appCompatTextView = onView(
                allOf(withId(android.R.id.text1), withText("Goblins? Goblins!"), isDisplayed()));
        appCompatTextView.perform(click());

        ViewInteraction appCompatButton6 = onView(
                allOf(withId(R.id.start_campaign_button), withText("start campaign"), isDisplayed()));
        appCompatButton6.perform(click());

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(3420408);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction textView2 = onView(
                allOf(withId(R.id.campaign_title), withText("Espresso"),
                        childAtPosition(
                                allOf(withId(R.id.campaign_details),
                                        childAtPosition(
                                                IsInstanceOf.<View>instanceOf(android.widget.RelativeLayout.class),
                                                0)),
                                0),
                        isDisplayed()));
        textView2.check(matches(withText("Espresso")));

        ViewInteraction textView3 = onView(
                allOf(withId(R.id.campaign_description), withText("Espresso testing"),
                        childAtPosition(
                                allOf(withId(R.id.campaign_details),
                                        childAtPosition(
                                                IsInstanceOf.<View>instanceOf(android.widget.RelativeLayout.class),
                                                0)),
                                2),
                        isDisplayed()));
        textView3.check(matches(withText("Espresso testing")));

        ViewInteraction textView4 = onView(
                allOf(withId(R.id.campaign_base_game), withText("Goblins? Goblins!"),
                        childAtPosition(
                                allOf(withId(R.id.campaign_details),
                                        childAtPosition(
                                                IsInstanceOf.<View>instanceOf(android.widget.RelativeLayout.class),
                                                0)),
                                3),
                        isDisplayed()));
        textView4.check(matches(withText("Goblins? Goblins!")));

        ViewInteraction imageButton2 = onView(
                allOf(withId(R.id.new_module_fab),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.dm_fragment_container),
                                        0),
                                1),
                        isDisplayed()));
        imageButton2.check(matches(isDisplayed()));

        ViewInteraction floatingActionButton3 = onView(
                allOf(withId(R.id.new_module_fab), isDisplayed()));
        floatingActionButton3.perform(click());

        ViewInteraction editText4 = onView(
                allOf(withId(R.id.new_module_title), withText("Title"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.dm_fragment_container),
                                        0),
                                1),
                        isDisplayed()));
        editText4.check(matches(withText("Title")));

        ViewInteraction editText5 = onView(
                allOf(withId(R.id.new_module_summary), withText("Summary"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.dm_fragment_container),
                                        0),
                                3),
                        isDisplayed()));
        editText5.check(matches(withText("Summary")));

        ViewInteraction textView5 = onView(
                allOf(withId(android.R.id.text1), withText("Select a module type…"),
                        childAtPosition(
                                allOf(withId(R.id.new_module_type_spinner),
                                        childAtPosition(
                                                IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                                4)),
                                0),
                        isDisplayed()));
        textView5.check(matches(withText("Select a module type…")));

        ViewInteraction button8 = onView(
                allOf(withId(R.id.create_new_module_button),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.dm_fragment_container),
                                        0),
                                5),
                        isDisplayed()));
        button8.check(matches(isDisplayed()));

        ViewInteraction appCompatEditText5 = onView(
                allOf(withId(R.id.new_module_title), isDisplayed()));
        appCompatEditText5.perform(replaceText("Espresso Module"), closeSoftKeyboard());

        ViewInteraction appCompatEditText6 = onView(
                allOf(withId(R.id.new_module_summary), isDisplayed()));
        appCompatEditText6.perform(replaceText("Java"), closeSoftKeyboard());

        ViewInteraction appCompatSpinner2 = onView(
                allOf(withId(R.id.new_module_type_spinner), isDisplayed()));
        appCompatSpinner2.perform(click());

        ViewInteraction appCompatTextView2 = onView(
                allOf(withId(android.R.id.text1), withText("Battle"), isDisplayed()));
        appCompatTextView2.perform(click());

        ViewInteraction appCompatButton7 = onView(
                allOf(withId(R.id.create_new_module_button), withText("create module"), isDisplayed()));
        appCompatButton7.perform(click());

        ViewInteraction recyclerView = onView(
                allOf(withId(R.id.module_recycler_view), isDisplayed()));
        recyclerView.perform(actionOnItemAtPosition(0, click()));

        pressBack();

        ViewInteraction textView6 = onView(
                allOf(withId(R.id.module_title), withText("Espresso Module"),
                        childAtPosition(
                                withParent(withId(R.id.module_view_pager)),
                                0),
                        isDisplayed()));
        textView6.check(matches(withText("Espresso Module")));

        ViewInteraction textView7 = onView(
                allOf(withId(R.id.module_type), withText("Battle"),
                        childAtPosition(
                                withParent(withId(R.id.module_view_pager)),
                                1),
                        isDisplayed()));
        textView7.check(matches(withText("Battle")));

        ViewInteraction textView8 = onView(
                allOf(withId(R.id.module_summary), withText("Java"),
                        childAtPosition(
                                withParent(withId(R.id.module_view_pager)),
                                2),
                        isDisplayed()));
        textView8.check(matches(withText("Java")));

        ViewInteraction button9 = onView(
                allOf(withId(R.id.launch_module_button),
                        childAtPosition(
                                withParent(withId(R.id.module_view_pager)),
                                3),
                        isDisplayed()));
        button9.check(matches(isDisplayed()));

        ViewInteraction button10 = onView(
                allOf(withId(R.id.complete_module_button),
                        childAtPosition(
                                withParent(withId(R.id.module_view_pager)),
                                4),
                        isDisplayed()));
        button10.check(matches(isDisplayed()));

        ViewInteraction button11 = onView(
                allOf(withId(R.id.complete_module_button),
                        childAtPosition(
                                withParent(withId(R.id.module_view_pager)),
                                4),
                        isDisplayed()));
        button11.check(matches(isDisplayed()));

        ViewInteraction imageButton3 = onView(
                allOf(withId(R.id.new_npc_fab),
                        childAtPosition(
                                withParent(withId(R.id.module_view_pager)),
                                1),
                        isDisplayed()));
        imageButton3.check(matches(isDisplayed()));

        ViewInteraction floatingActionButton4 = onView(
                allOf(withId(R.id.new_npc_fab), isDisplayed()));
        floatingActionButton4.perform(click());

        ViewInteraction editText6 = onView(
                allOf(withId(R.id.npc_name_edit_text), withText("Name"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        0),
                                1),
                        isDisplayed()));
        editText6.check(matches(withText("Name")));

        ViewInteraction textView9 = onView(
                allOf(withText("Level:"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        1),
                                0),
                        isDisplayed()));
        textView9.check(matches(withText("Level:")));

        ViewInteraction textView10 = onView(
                allOf(withText("Money:"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        1),
                                2),
                        isDisplayed()));
        textView10.check(matches(withText("Money:")));

        ViewInteraction textView11 = onView(
                allOf(withText("Size:"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        2),
                                0),
                        isDisplayed()));
        textView11.check(matches(withText("Size:")));

        ViewInteraction textView12 = onView(
